--- a/Source/AllowanceApp.Api/appsettings.json
+++ b/Source/AllowanceApp.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=allowance.db"
+    "DefaultConnection": "Data Source=accounts.db"
   }
 }
