Refactored all of the DTOs into the Shared project so that the Client and Server side can both have access to them. Wrote another test before realizing that the Api tests are using the real database, which I don't want and need to figure out how to change that.

--- a/Source/AllowanceApp.Api/AllowanceApp.Api.csproj
+++ b/Source/AllowanceApp.Api/AllowanceApp.Api.csproj
@@ -19,6 +19,7 @@
   <ItemGroup>
     <ProjectReference Include="..\AllowanceApp.Data\AllowanceApp.Data.csproj" />
     <ProjectReference Include="..\AllowanceApp.Core\AllowanceApp.Core.csproj" />
+    <ProjectReference Include="..\AllowanceApp.Shared\AllowanceApp.Shared.csproj" />
   </ItemGroup>
 
 </Project>
