Started writing tests for the WeeklyAllowanceService, but not sure how to proceed, so switching gears to Blazor for the moment

--- a/Source/AllowanceApp.Api/AllowanceApp.Api.csproj
+++ b/Source/AllowanceApp.Api/AllowanceApp.Api.csproj
@@ -22,4 +22,9 @@
     <ProjectReference Include="..\AllowanceApp.Shared\AllowanceApp.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="AllowanceApp.Tests" />
+  </ItemGroup>
+
+
 </Project>
