--- a/Source/AllowanceApp.Blazor/AllowanceApp.Blazor.csproj
+++ b/Source/AllowanceApp.Blazor/AllowanceApp.Blazor.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <ItemGroup>
     <ProjectReference Include="..\AllowanceApp.Shared\AllowanceApp.Shared.csproj" />
@@ -8,6 +8,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>60802cce-bcbf-4417-844c-2da50e5614a2</UserSecretsId>
   </PropertyGroup>
 
 </Project>
