--- a/Source/AllowanceApp.Api/appsettings.Release.json
+++ b/Source/AllowanceApp.Api/appsettings.Release.json
@@ -10,6 +10,6 @@
     "DefaultConnection": "Data Source=accounts.db"
   },
   "Database": {
-    "Path": ""
+    "Path": "/app/database/accounts.db"
   }
 }
