Reverted a change that I think caused CI to fail

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,6 @@ jobs:
         run: dotnet build --no-restore
 
       - name: Test project
-        run: dotnet test --settings Tests/AllowanceApp.Tests/Settings/Test.runsettings --no-build --configuration Release --collect:"XPlat Code Coverage"
+        run: dotnet test --settings Tests/AllowanceApp.Tests/Settings/Test.runsettings --no-build --collect:"XPlat Code Coverage"
 
 
