--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: checkout
+      - name: Check out repo
         uses: actions/checkout@v3
 
       - name: Setup dotnet
@@ -29,5 +29,33 @@ jobs:
 
       - name: Test project
         run: dotnet test --settings Tests/AllowanceApp.Tests/Settings/Test.runsettings --no-build --collect:"XPlat Code Coverage"
+
+  publish:
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.ref == 'refs/heads/main'
+    steps:
+      - name: Check out repo
+        uses: actions/checkout@v3
+
+      - name: Log in to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build Docker image
+        run: |
+          IMAGE_NAME=ghcr.io/${{ github.actor }}/allowanceapp.api
+          IMAGE_TAG=${GITHUB_SHA::7}
+          docker build -f Source/AllowanceApp.Api/Dockerfile -t $IMAGE_NAME:$IMAGE_TAG -t $IMAGE_NAME:latest .
+
+      - name: Publish Docker image
+        run: |
+          IMAGE_NAME=ghcr.io/${{ github.actor }}/allowanceapp.api
+          IMAGE_TAG=${GITHUB_SHA::7}
+          docker push $IMAGE_NAME:$IMAGE_TAG
+          docker push $IMAGE_NAME:latest
 
 
