Fixing a case error in the git hub container repository name

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,13 +50,13 @@ jobs:
 
       - name: Build Docker image
         run: |
-          IMAGE_NAME=ghcr.io/${{ github.actor }}/allowanceapp.api
+          IMAGE_NAME=ghcr.io/veryspicyheatwave/allowanceapp/api-container
           IMAGE_TAG=${GITHUB_SHA::7}
           docker build -f Source/AllowanceApp.Api/Dockerfile -t $IMAGE_NAME:$IMAGE_TAG -t $IMAGE_NAME:latest .
 
       - name: Publish Docker image
         run: |
-          IMAGE_NAME=ghcr.io/${{ github.actor }}/allowanceapp.api
+          IMAGE_NAME=ghcr.io/veryspicyheatwave/allowanceapp/api-container
           IMAGE_TAG=${GITHUB_SHA::7}
           docker push $IMAGE_NAME:$IMAGE_TAG
           docker push $IMAGE_NAME:latest
