--- a/Source/AllowanceApp.Blazor/appsettings.json
+++ b/Source/AllowanceApp.Blazor/appsettings.json
@@ -5,7 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApiBaseUrl": "http://allowance-api:8080"
 }
 
 
